added citation for original author credit

--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
   <title>PlaceHolder1</title>
-
 </head>
 
 <main>
+    <!-- ***************************************************************************************/
+  *    Title: brickbones/video-background.html source code
+  *    Author: Fremaint, J
+  *    Date: Apr 27, 2020.
+  *    Code version: 1.3
+  *    Availability: https://gist.github.com/manuSCRIPTS13/c1d2d612d31ae52c5aacc3a18c91ddcb.js
+  *
+  ***************************************************************************************/ -->
     <div class="section">
 
         <h1>Place Holder for a future Project</h1>
